Implemented profile page

--- a/front-end/package.json
+++ b/front-end/package.json
@@ -5,15 +5,18 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "tailwind": "npx tailwindcss -o ./src/styles.css --watch"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.0.11",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@tailwindcss/postcss": "^4.0.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router": "^7.2.0"
+    "react-router-dom": "^7.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
@@ -26,9 +29,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.0.11",
-    "typescript": "~5.7.2",
-    "typescript-eslint": "^8.24.1",
+    "tailwindcss": "^3.4.1",
     "vite": "^6.2.0"
   }
 }
