--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,22 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
+# Node modules (both frontend and backend)
+node_modules/
+frontend/node_modules/
+backend/node_modules/
+
+# Build outputs
+dist/
+dist-ssr/
+frontend/dist/
+backend/dist/
+
+# Local environment files
 *.local
+.env
+frontend/.env
+backend/.env
 
 # Editor directories and files
 .vscode/*
