--- a/front-end/tsconfig.app.json
+++ b/front-end/tsconfig.app.json
@@ -20,7 +20,7 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "incremental": true, 
   },
   "include": ["src"]
 }
