--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "mongoose": "^8.14.0"
+    "mongoose": "^8.14.0",
+    "redis": "^5.0.1",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
